# axiom

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .readthedocs.yaml  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  ThirdPartyNotices.txt  numpy-functionality.py  ops.md  test.py  test_new_ops.cpp
.github/workflows/: ci-code-quality.yml  ci-linux.yml  ci-macos.yml  ci-windows.yml  ci.yml  release.yml
benchmarks/: CMakeLists.txt  README.md
benchmarks/common/: benchmark_utils.hpp  pytorch_baseline.py
benchmarks/compare/: elementwise_axiom.cpp  elementwise_eigen.cpp  fft_axiom.cpp  linalg_axiom.cpp  linalg_eigen.cpp  matmul_armadillo.cpp  matmul_axiom.cpp  matmul_axiom_cuda.cpp  matmul_axiom_gpu.cpp  matmul_eigen.cpp  unary_axiom.cpp  unary_eigen.cpp
benchmarks/core/fusion/: fusion_benchmark.cpp  lazy_vs_eager.cpp
benchmarks/core/simd/: simd_kernels.cpp
benchmarks/gemm/: gemm_benchmark.cpp  gemm_gpu_benchmark.cpp
benchmarks/results/: .gitignore
benchmarks/tools/: __init__.py  gpu_compare.py  plotter.py  report.py  runner.py
benchmarks/tools/baselines/: __init__.py  comprehensive_baseline.py  numpy_baseline.py  pytorch_baseline.py  pytorch_cuda_baseline.py
cmake/: AxiomCUDA.cmake  AxiomConfig.cmake.in  FindLibOMP.cmake  FindOpenBLAS.cmake  SimdMultiArch.cmake  axiom.pc.in
docs/: BACKEND_ARCHITECTURE.md  BENCHMARKS.md  Doxyfile  conf.py  getting-started.md  index.md  ops.md  requirements.txt  usage.md
docs/_static/: custom.css
docs/api/: activations.md  arithmetic.md  comparison.md  debug.md  devices-and-storage.md  dtypes.md  dtypes.rst  einops.md  einops.rst  errors.md  errors.rst  fft.md  fft.rst  functors.md  index.md  indexing-ops.md  io.md  io.rst  linalg.md  linalg.rst  logical-and-bitwise.md  masking-and-selection.md  nn.rst  normalization.md  numeric.md  numeric.rst  operations.rst  operators.md  parallel.md  pooling.md  random.md  random.rst  reductions.md  stacking-and-splitting.md  system.md  system.rst  tensor-class.md  tensor-creation.md  tensor-manipulation.md  tensor.rst  (+1 more)
docs/development/: adding-operations.md  backend-architecture.md  building.md  code-style.md  contributing.md  index.md  testing.md
docs/getting-started/: index.md  installation.md  numpy-users.md  quickstart.md
docs/user-guide/: custom-functors.md  debugging-and-profiling.md  einops.md  error-handling.md  fft.md  file-io.md  gpu-acceleration.md  index.md  indexing-and-slicing.md  lazy-evaluation.md  linear-algebra.md  operations.md  random.md  reductions-and-statistics.md  shape-manipulation.md  tensor-basics.md
examples/: CMakeLists.txt  basic_operations.cpp  basic_usage.cpp  whisper_poc.cpp
include/axiom/: audio.hpp  axiom.hpp  bfloat16.hpp  debug.hpp  dispatch.hpp  dtype.hpp  einops.hpp  error.hpp  fast_div.hpp  fft.hpp  float16.hpp  functors.hpp  indexing.hpp  io.hpp  linalg.hpp  nn.hpp  numeric.hpp  operations.hpp  parallel.hpp  random.hpp  sampling.hpp  shape.hpp  storage.hpp  system.hpp  tensor.hpp  tensor_operators.hpp  type_conversion.hpp
include/axiom/expr/: base.hpp  binary.hpp  cpu_fused.hpp  fluent.hpp  matmul.hpp  traits.hpp  unary.hpp
include/axiom/graph/: compiled_graph.hpp  cuda_fusion.hpp  fused_kernel.hpp  fused_patterns.hpp  gpu_fusion.hpp  graph_cache.hpp  graph_compiler.hpp  graph_executor.hpp  graph_node.hpp  graph_registry.hpp  graph_signature.hpp  op_traits.hpp
include/axiom/io/: axiom_tensor_generated.h  io.hpp  numpy.hpp  safetensors.hpp
include/axiom/nn/: activation.hpp  ane_compiled_model.hpp  attention.hpp  container.hpp  conv.hpp  embedding.hpp  linear.hpp  module.hpp  normalization.hpp  pooling.hpp  positional.hpp  rnn.hpp
src/backends/: backend_registry.cpp  backend_registry.hpp
src/backends/ane/: ane_bridge.h  ane_bridge.mm  ane_iosurface.h  ane_iosurface.mm  ane_operations.hpp  ane_storage.hpp  ane_storage.mm  ane_tracer.hpp  ane_tracer.mm  mil_generator.hpp  mil_generator.mm
src/backends/cpu/: cpu_accelerate.cpp  cpu_accelerate.hpp  cpu_operations.cpp  cpu_operations.hpp  cpu_simd.hpp  cpu_storage.cpp  cpu_storage.hpp  flash_attention_cpu.cpp  vdsp.cpp  vdsp.hpp
src/backends/cuda/: cublas_operations.cu  cublas_operations.hpp  cuda_allocator.cu  cuda_allocator.hpp  cuda_buffer_provider.hpp  cuda_context.cu  cuda_context.hpp  cuda_fused.cu  cuda_fused.hpp  cuda_fusion_cache.hpp  cuda_kernels.cu  cuda_kernels.hpp  cuda_launch_cache.hpp  (+15 more)
src/expr/: aliasing.cpp  cpu_eval.cpp  gpu_eval.mm
src/graph/: fused_kernel.cpp  fused_patterns.cpp  graph_cache.cpp  graph_compiler.cpp  graph_executor.cpp  graph_registry.cpp  graph_signature.cpp
src/io/: axiom_tensor.fbs  io.cpp  io_flatbuffers.cpp  io_numpy.cpp  io_safetensors.cpp
src/nn/: activation.cpp  ane_compiled_model.mm  attention.cpp  container.cpp  conv.cpp  embedding.cpp  linear.cpp  module.cpp  normalization.cpp  pooling.cpp  positional.cpp  rnn.cpp
src/parallel/: parallel.cpp
src/tensor/: audio.cpp  debug.cpp  dtype.cpp  einops.cpp  fft.cpp  indexing.cpp  io.cpp  linalg.cpp  operations.cpp  random.cpp  sampling.cpp  shape.cpp  storage.cpp  system.cpp  tensor.cpp  type_conversion.cpp
tests/: CMakeLists.txt  axiom_test_main.cpp  axiom_test_utils.hpp  test_advanced_indexing.cpp  test_ane_basic.cpp  test_ane_compiled.cpp  test_ane_integration.cpp  test_ane_mil.cpp  test_audio.cpp  test_bfloat16.cpp  test_broadcast.cpp  test_conv1d.cpp  test_conv2d.cpp  test_conv_transpose.cpp  test_cpu_gpu_parity.cpp  test_custom_functors.cpp  test_einops_extended.cpp  test_einops_reduce.cpp  test_einsum.cpp  test_embedding.cpp  test_fft.cpp  test_flash_attention.cpp  test_fusion.cpp  test_fusion_extended.cpp  test_graph_compiler.cpp  test_interpolate.cpp  test_io_flatbuffers.cpp  test_io_numpy.cpp  test_io_safetensors.cpp  test_lazy_evaluation.cpp  test_nn_activation_modules.cpp  test_nn_attention.cpp  test_nn_ergonomics.cpp  test_nn_groupnorm.cpp  test_nn_layers.cpp  test_nn_module.cpp  test_nn_pooling_modules.cpp  test_nn_positional.cpp  test_nn_rnn.cpp  test_parallel.cpp  (+33 more)
tests/fixtures/: generate_npy_fixtures.py
(+64 files in other folders)
